<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RankingFilter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">LOADING…</string>
    <string name="this_action_may_contain_ads">This action may contain ads</string>
    <string name="ranking_filter">Ranking Filter</string>
    <string name="trending">Trending</string>
    <string name="football">Football</string>
    <string name="food">Food</string>
    <string name="anime">Anime</string>
    <string name="idol">Idol</string>
    <string name="makeup">Makeup</string>
    <string name="cartoon">Cartoon</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="no_likes">No likes</string>
    <string name="add_sound">Add sound</string>
    <string name="song_title">Song Title</string>
    <string name="duration_0_00">0:00</string>
    <string name="no_sound">No Sound</string>
    <string name="add_filter">Add filter</string>
    <string name="please_select_an_item">Please select an item</string>
    <string name="preview_result">Preview result</string>
    <string name="save">Save</string>
    <string name="share_my_videos">Share my videos</string>
    <string name="other">Other</string>
    <string name="all_challenge">All challenge</string>
    <string name="share">Share</string>
    <string name="worldcup_ranking">Worldcup Ranking</string>
    <string name="empty_library">Empty Library!</string>
    <string name="looks_like_you_don_t_have_anything_here_yet_nlet_s_create_some_new_projects">Looks like you don\'t have anything here yet,\nlet\'s create some new projects.</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share app</string>
    <string name="app_feedback">App Feedback</string>
    <string name="dear_support_team">Dear Support Team,\n\n</string>
    <string name="send_email">Send Email</string>
    <string name="no_email_app_found">No email app found</string>
    <string name="error_opening_email">Error opening email: %1$s</string>
    <string name="check_out_this_awesome_app">Check out this awesome app!</string>
</resources>