<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Top Bar with Settings -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_25sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/worldcup_ranking"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_28pt_bold" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_setting"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@null" />

    </LinearLayout>

    <!-- Main Content Area -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- RecyclerView for Videos -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewVideos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_20sdp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_video" />

        <!-- Empty State Layout -->
        <LinearLayout
            android:id="@+id/emptyStateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/ic_empty_folder"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/empty_library"
                android:textSize="@dimen/_22ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_28pt_semibold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/looks_like_you_don_t_have_anything_here_yet_nlet_s_create_some_new_projects"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/gray_600"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Navigation Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/bg_bottom_bar"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <!-- Home Icon -->
        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/bgBtnCamera"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bg_btn_camera"
            app:layout_constraintStart_toEndOf="@+id/btnHome"
            app:layout_constraintEnd_toStartOf="@+id/btnPhoto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Camera Icon -->
        <ImageView
            android:id="@+id/btnCamera"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:src="@drawable/ic_camera"
            android:contentDescription="@null"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:elevation="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="@+id/bgBtnCamera"
            app:layout_constraintEnd_toEndOf="@+id/bgBtnCamera"
            app:layout_constraintTop_toTopOf="@+id/bgBtnCamera"
            app:layout_constraintBottom_toBottomOf="@+id/bgBtnCamera"/>

        <!-- Photo Icon -->
        <ImageView
            android:id="@+id/btnPhoto"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_book_dark"
            android:contentDescription="@null"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>